flux/apps/plex-proxy/endpoint_slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: plex
  labels:
    kubernetes.io/service-name: plex
    endpointslice.kubernetes.io/managed-by: fluxcd

addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.210
    conditions:
      ready: true
  - addresses:
      - 192.168.1.213
    conditions:
      ready: true
ports:
  - port: 32400
    protocol: TCP
    name: http
