flux/apps/plex-proxy/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: plex

subsets:
  - addresses:
      - ip: 192.168.1.210
      - ip: 192.168.1.213
    ports:
      - port: 32400
        protocol: TCP
        name: http
