flux/apps/plex-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  clusterIP: None
  ports:
    - name: http
      port: 32400
      protocol: TCP
